# Qt-Color-Widgets

./: .gitignore  CMakeLists.txt  ColorPicker.pro  README  README.md  color_dialog.cpp  color_dialog.hpp  color_dialog.ui  color_preview.cpp  color_preview.hpp  color_wheel.cpp  color_wheel.hpp  color_widgets.pri  color_widgets.pro  main.cpp  moc_color_dialog.cpp  moc_color_preview.cpp  moc_color_wheel.cpp  refactor.sh
cmake/: QtColorWidgets-config.cmake  install.cmake  versioning.cmake
cmake/modules/: ProjectVersioning.cmake  VersionInfo.in  VersionResource.rc  generate_product_version.cmake
cmake/modules/ProjectVersioning/: version.h.in
color_dialog/: color_dialog.cpp  color_dialog.hpp  color_dialog.pri  color_dialog.ui
color_widgets/: README  color_dialog.ui  color_preview.cpp  color_preview.hpp  color_preview_plugin.cpp  color_preview_plugin.hpp  color_selector.cpp  color_selector.hpp  color_selector_plugin.cpp  color_selector_plugin.hpp  color_wheel.cpp  color_wheel.hpp  color_wheel_plugin.cpp  color_wheel_plugin.hpp  color_widget_plugin_collection.cpp  color_widget_plugin_collection.hpp  color_widgets.pri  color_widgets.pro  gradient_slider.cpp  gradient_slider.hpp  gradient_slider_plugin.cpp
color_widgets_demo/: CMakeLists.txt  color_widgets_demo.pro  demo_dialog.cpp  demo_dialog.hpp  demo_dialog.ui  main.cpp
color_widgets_designer_plugin/: CMakeLists.txt  color_2d_slider_plugin.cpp  color_2d_slider_plugin.hpp  color_line_edit_plugin.cpp  color_line_edit_plugin.hpp  color_list_plugin.cpp  color_list_plugin.hpp  color_palette_widget_plugin.cpp  color_palette_widget_plugin.hpp  color_preview_plugin.cpp  color_preview_plugin.hpp  color_selector_plugin.cpp  color_selector_plugin.hpp  color_wheel_plugin.cpp  color_wheel_plugin.hpp  color_widget_plugin_collection.cpp  color_widget_plugin_collection.hpp  color_widgets_plugin.pro  gradient_slider_plugin.cpp  gradient_slider_plugin.hpp  hue_slider_plugin.cpp  new_plugin  swatch_plugin.cpp  swatch_plugin.hpp
demo/: demo.pro  demo_dialog.cpp  main.cpp
designer_plugin/: color_list_plugin.cpp  color_list_plugin.hpp  color_preview_plugin.cpp  color_selector_plugin.cpp  color_wheel_plugin.cpp  color_widget_plugin.pro  color_widget_plugin_collection.cpp  color_widget_plugin_collection.hpp  designer_plugin.pro  gradient_slider_plugin.cpp  hue_slider_plugin.cpp  hue_slider_plugin.hpp
gallery/: CMakeLists.txt  README.md  screenshot.cpp
include/: abstract_widget_list.hpp  bound_color_selector.hpp  color_2d_slider.hpp  color_delegate.hpp  color_dialog.hpp  color_line_edit.hpp  color_list_widget.hpp  color_names.hpp  color_palette.hpp  color_palette_model.hpp  color_palette_widget.hpp  color_preview.hpp  color_selector.hpp  color_wheel.hpp  colorpicker_global.hpp  gradient_slider.hpp  hue_slider.hpp  swatch.hpp
include/QtColorWidgets/: CMakeLists.txt  color_names.hpp  color_palette_model.hpp  color_palette_widget.hpp  color_utils.hpp  swatch.hpp
src/: abstract_widget_list.cpp  abstract_widget_list.hpp  bound_color_selector.cpp  bound_color_selector.hpp  color_2d_slider.cpp  color_delegate.cpp  color_delegate.hpp  color_dialog.cpp  color_dialog.hpp  color_dialog.ui  color_line_edit.cpp  color_list_model.cpp  color_list_model.hpp  color_list_widget.cpp  color_list_widget.hpp  color_names.cpp  color_palette.cpp  color_palette_model.cpp  color_palette_widget.cpp  color_palette_widget.ui  color_preview.cpp  color_preview.hpp  color_selector.cpp  color_selector.hpp  color_utils.cpp  color_utils.hpp  color_wheel.cpp  color_wheel.hpp  gradient_slider.cpp  gradient_slider.hpp  hue_slider.cpp  paint_border.hpp  swatch.cpp
src/QtColorWidgets/: CMakeLists.txt  abstract_widget_list.cpp  bound_color_selector.cpp  color_2d_slider.cpp  color_delegate.cpp  color_dialog.cpp  color_dialog.ui  color_line_edit.cpp  color_list_widget.cpp  color_names.cpp  color_palette.cpp  color_palette_model.cpp  color_palette_widget.cpp  color_preview.cpp  color_selector.cpp  color_utils.cpp  color_wheel.cpp  gradient_slider.cpp  hue_slider.cpp  swatch.cpp
